--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.11",
-    "axios": "^1.12.2",
+    "axios": "^1.13.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-player": "^3.3.3",
     "react-router-dom": "^7.9.4",
+    "react-youtube": "^10.1.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11"
   },
