--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "axios": "^1.13.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "iso8601-duration": "^2.1.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-player": "^3.3.3",
     "react-router-dom": "^7.9.4",
     "react-youtube": "^10.1.0",
+    "sonner": "^2.0.7",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11"
   },
